style.css
/**
 * @license
 * Copyright 2019 Google LLC. All Rights Reserved.
 * SPDX-License-Identifier: Apache-2.0
 */
/* 
 * Always set the map height explicitly to define the size of the div element
 * that contains the map. 
 */

* {
  font-family: system-ui;
}

.mainPage {
  background-color: #004080;
  color: white;
  text-align: center;
  margin: auto;
  justify-content: center;
  width: inherit;
  /* max-width: 100%; */
  margin-bottom: 5vh;
}

#landingPage {
  text-align: center;
  align-content: center;
  font-size: 45px;
  width: inherit;
}

#webpageTitle {
  font-size: 8vh;
}

#webpageImage {
  max-height: inherit;
  max-width: inherit;
}


.addressInput {
  /* margin-top: .3vh; */
  margin-bottom: 3vh;
  color: #183F7C;
}

#address:hover{
  background-color: lightgray;
  transition: 0.5s;
}

#address {
  text-align: center;
  border-radius: 100px;
  height: 30px;
  width: 400px;
  font-size: medium;
  /* background-image: url(images/Vector.svg);
  background-position: 2px 3px;
  background-repeat: no-repeat;
  background-size: 22px;
  align-items: first baseline; */

}


::placeholder {
  color: #183F7C;
}

.displayAddressInput {
  text-align: center;
  margin-top: 10vh;
  display: none;

}

#weather {
  justify-content: center;
  width: 60%;
  margin: 0 auto;
}

#weatherBar {
  margin: 0 auto;
  margin-top: 4px;
  display: flex;
  overflow-x: scroll;
  width: 100%;
}

.weatherCard {
  color: white;
  border: 2px solid #FFFFFF;
  border-radius: 11px;
  margin-right: 12px;
  font-size: 20px;
}

.weatherCard p {
  margin: 4px;
}

#weatherTitle {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 30px;
}

.resultContents {
  display: flex;
}

.homeInfo {
  padding-top: 5vh;
  justify-content: center;
  /* display: flex; */
}


.homeMap {
  height: 500px;
  width: 100%
}

#diggingImage {
  width: 60%;
  height: 60%;
  padding-right: 5vw;
}

.otherSideOfTheWorld {
  height: 60%;
  width: 100%;
  margin-left: 10px;
  /* margin-right: 10px; */

}

.turtlePic {
  height: 200px
}

#map_canvas1 {
  border-radius: 8px;
  margin: auto;

}

#map_canvas2 {
  border-radius: 8px;
  height:70%;
  margin: auto;
}

.resultContents {
  display: flex;
}

ul {
  text-decoration: none;
  list-style: none;
  margin: auto;
}

.locationInformation {
  width: 40%;
  justify-content: center;
  background-color: white;
  color: #004080;
  border-radius: 8px;
  /* padding: 20px; */
  margin-left: 10px;
  /* margin-right: 10px; */
}


.result {
  margin-top: 10vh;
}

#map_canvas1 {
  text-align: center;
}

.switch {
  position: relative;
  display: block;
  width: 60px;
  height: 30px;
  padding: 3px;
  margin: 0 10px 10px 0;
  background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);
  background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);
  border-radius: 18px;
  box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
  cursor: pointer;
  box-sizing: content-box;
}

.switch-input {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  box-sizing: content-box;
}

.switch-label {
  position: relative;
  display: block;
  height: inherit;
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  background: red;
  border-radius: inherit;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
  box-sizing: content-box;
}

.switch-label:before,
.switch-label:after {
  position: absolute;
  top: 50%;
  margin-top: -.5em;
  line-height: 1;
  -webkit-transition: inherit;
  -moz-transition: inherit;
  -o-transition: inherit;
  transition: inherit;
  box-sizing: content-box;
}

.switch-label:before {
  content: attr(data-off);
  right: 12px;
  color: white;
  text-shadow: 0 1px rgba(255, 255, 255, 0.5);
}

.switch-label:after {
  content: attr(data-on);
  left: 12px;
  color: #FFFFFF;
  text-shadow: 0 1px rgba(0, 0, 0, 0.2);
  opacity: 0;
}

.switch-input:checked~.switch-label {
  background: #183F7C;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);
}

.switch-input:checked~.switch-label:before {
  opacity: 1;
}

.switch-input:checked~.switch-label:after {
  opacity: 1;
}

.switch-handle {
  position: absolute;
  top: 4px;
  left: 4px;
  width: 28px;
  height: 28px;
  background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);
  background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0);
  border-radius: 100%;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
}

.switch-handle:before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -6px 0 0 -6px;
  width: 12px;
  height: 12px;
  background: linear-gradient(to bottom, red, #FFFFFF);
  background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF);
  border-radius: 6px;
  box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
}

.switch-input:checked~.switch-handle {
  left: 34.5px;
  box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
}

/* Transition
========================== */
.switch-label,
.switch-handle {
  transition: All 0.3s ease;
  -webkit-transition: All 0.3s ease;
  -moz-transition: All 0.3s ease;
  -o-transition: All 0.3s ease;
}

#factsTitle {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 30px;
}

#facts {
  justify-content: center;
  width: 60%;
  margin: 0 auto;
  margin-bottom: 20px;
}

#cards {
  display: flex;
  justify-content: space-between;
  margin: auto;
}

.cardContainer {
  /* border: solid; */
  background-color: white;
  width: 200px;
  border-radius: 8px;
  margin-bottom: 10px;
}

.cardTitle {
  font-size: 12px;
  text-align: left;
  padding-left: 10px;
  color: #636368;
}



#populationFact {
  font-size: 24px;
  color: #004080;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
}

#gdpFact {
  font-size: 24px;
  color: #004080;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
}

#currencyFact {
  font-size: 24px;
  color: #004080;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
}

#internetUsersFact {
  font-size: 24px;
  color: #004080;
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
}

.cardIcon {
  text-align: right;
  padding-right: 10px;
  color: #636368;
  margin-bottom: 10px;
}

#fishSection {
  justify-content: center;
  width: 60%;
  margin: 0 auto;
  display: none;
  align-items: center;
}

#fishTitle {
  font-size: 30px;
}

#fishInformation {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: auto;
  /* justify-content: center; */
  width: 60%;
}

#fishText {
  text-align: left;
  padding-right: 20px;
}

#fishText h3 {
  font-size: 50px;

}

#fishText #fishOverview {
  font-size: 20px;
  font-weight: bold;
}


#fishImg img {
  border-radius: 20px;
  width: 500px;
  height: auto;

}

#donate {
  justify-content: center;
  width: 100%;
  margin: 0 auto;
}

#donate button {
  display: block;
  width: 100%;
  border: none;
  background-color: white;
  color: #004080;
  padding: 14px 28px;
  font-size: 16px;
  cursor: pointer;
  text-align: center;
  border-radius: 100px;
  font-size: 30px;
  transition: 0.5s;
  margin-top: 20px;
}

#donate button:hover {
  background-color: #60D29F;
  color: #004080;
}

a {
  text-decoration: none;
}

#digAgainButton {
  display: block;
  width: 300px;
  padding: 10px;
  border: none;
  background-color: white;
  color: #004080;
  cursor: pointer;
  text-align: center;
  border-radius: 100px;
  font-size: 20px;
  transition: 0.5s;
  margin: auto;
  margin-top: 40px;
  margin-bottom: 20px;
}

#digAgainButton:hover {
  background-color: lightgrey;
  color: #004080;
}

#submitButton {
  display: none;
  margin: auto;
  margin-top: 10px;
  padding: 5px 10px;
  border-radius: 100px;
  background-color: white;
  color: #004080;
}

@media(max-width:1370px) {
  #cards {
    flex-direction: column;
    margin: auto;
    align-items: center;
    justify-content: center;
  }

  #fishInformation {
    display: block;
    align-items: center;
    justify-content: center;
    justify-content: space-between;
  }

  #fishText {
    align-items: center;
    justify-content: center;
    text-align: center;
  }

}

@media(max-width:900px) {
  .mainPage {
    margin-left: 2vw;
    margin-right: 2vw;
    align-items: center;
    justify-content: center;
    text-align: center;
  }
}

#otherCountry {
  font-size: 50px;
}

